--- a/info.html
+++ b/info.html
@@ -66,7 +66,7 @@
             padding: 15px 20px;
             text-decoration: none;
             color: white;
-            font-size: 1em;
+            font-weight: bold;
             text-align: center;
         }
 
