--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="ro">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa Ta Inteligentă</title>
+    <meta name="description" content="Transformăm locuințele obișnuite în case inteligente cu soluții de iluminat, termostate și sisteme de securitate de ultimă generație. Alege Casa Ta Inteligentă!">
+    <meta name="keywords" content="casa inteligentă, automatizare locuințe, iluminat smart, termostat inteligent, securitate smart, case smart">
+    <meta name="author" content="Casa Ta Inteligentă">
+    <meta name="robots" content="index, follow">
+    <title>Casa Ta Inteligentă - Soluții Smart pentru Locuința Ta</title>
+    <link rel="canonical" href="https://nenciug.github.io/case-smart/index.html">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -112,7 +118,6 @@
             text-decoration: underline;
         }
 
-        /* Responsive Design */
         @media (max-width: 768px) {
             .slogan {
                 font-size: 1.2em;
@@ -133,10 +138,11 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <div class="logo-container">
-            <img src="11.png" alt="Casa Ta Inteligentă">
+            <img src="11.png" alt="Logo Casa Ta Inteligentă">
         </div>
         <h2 class="slogan">Transformăm locuințele obișnuite în case inteligente!</h2>
     </header>
@@ -170,7 +176,8 @@
 
     <footer>
         <p>&copy; 2024 Casa Ta Inteligentă. Toate drepturile rezervate.</p>
-        <p><a href="termeni si conditii.html">Termeni și Condiții</a> | <a href="politica de confidentialitate">Politica de Confidențialitate</a> | <a href="contact.html">Contact</a></p>
+        <p><a href="termeni-si-conditii.html">Termeni și Condiții</a> | <a href="politica-de-confidentialitate.html">Politica de Confidențialitate</a> | <a href="contact.html">Contact</a></p>
     </footer>
 </body>
+
 </html>
