--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             }
         }
     </style>
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://nenciug.github.io/case-smart/sitemap.xml">
+
 </head>
 
 <body>
