--- a/produse.html
+++ b/produse.html
@@ -156,7 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ul>
                     <li>Bec inteligent LED (instalare și configurare) - 100 RON/buc</li>
                     <li>Bandă LED RGB (montaj și conectare la aplicație) - 300 RON/5 metri</li>
-                    <li>Întrerupător smart Wi-Fi (montaj și configurare) - 200 RON/buc</li>
+                    <li>Întrerupător smart Wi-Fi (montaj și configurare) - 100 RON/buc</li>
                     <br>
                 </ul>
             </li>
@@ -169,7 +169,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </li>
             <li><b>Sisteme de securitate inteligente</b>
                 <ul>
-                    <li>Cameră de supraveghere Wi-Fi (montaj și conectare la aplicație) - 500 RON/buc</li>
+                    <li>Cameră de supraveghere Wi-Fi (montaj și conectare la aplicație) - 200 RON/buc</li>
                     <li>Pachet de 2 camere de supraveghere + hub (montaj inclus) - 1.300 RON</li>
                     <li>Sistem complet de alarmă inteligentă (senzori uși/geamuri, sirenă, inclusiv instalare și configurare) - 2.000 RON</li>
                     <br>
@@ -177,7 +177,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </li>
             <li><b>Automatizarea electrocasnicelor</b>
                 <ul>
-                    <li>Priză inteligentă Wi-Fi (montaj și configurare) - 150 RON/buc</li>
+                    <li>Priză inteligentă Wi-Fi in doza (montaj și configurare) - 200 RON/buc</li>
                     <li>Smart Hub pentru automatizarea electrocasnicelor (montaj inclus) - 700 RON</li>
                     <li>Robot aspirator inteligent (configurare și integrare în sistem) - 2.500 RON</li>
                     <br>
@@ -194,10 +194,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ul>
                     <li>Senzor inteligent de temperatură și umiditate (instalare și integrare) - 150 RON</li>
                     <li>Senzor de inundație Wi-Fi (montaj și configurare) - 150 RON</li>
-                    <li>Senzor de prezență (instalare și configurare) - 200 RON</li>
+                    <li>Senzor de prezență (instalare și configurare) - 150 RON</li>
                     <li>Senzor de fum inteligent (montaj și conectare la aplicație) - 200 RON</li>
-                    <li>Senzor de gaz inteligent (instalare și configurare) - 250 RON</li>
-                    <li>Senzor pentru uși/geamuri (montaj inclus) - 150 RON/buc</li>
+                    <li>Senzor de gaz inteligent (instalare și configurare) - 150 RON</li>
+                    <li>Senzor pentru uși/geamuri (montaj inclus) - 100 RON/buc</li>
                     <li>Barieră IR (infraroșu) (montaj și configurare) - 600 RON</li>
                 </ul>
             </li>
