--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h3>Ne găsești aici:</h3>
     <div style="overflow:hidden; width: 100%; max-width: 600px; height: 400px; margin: 0 auto;">
         <iframe 
-            src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d877.2876355221531!2d25.618498046362742!3d45.7267907099888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sro!2sro!4v1735334875443!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d877.2876355221531!2d25.618498046362742!3d45.7267907099888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sro!2sro!4v1735334875443!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             width="100%" 
             height="100%" 
             style="border:0;" 
