--- a/produse.html
+++ b/produse.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-55BWCZKP');</script>
-<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produse - Casa Ta Inteligentă</title>
@@ -50,7 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
         nav {
             background-color: #444;
-            position: sticky; /* Fixează meniul în partea de sus la scroll */
+            position: sticky;
             top: 0;
             z-index: 1000;
         }
@@ -83,7 +76,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
         @media (max-width: 768px) {
             nav ul {
-                flex-direction: column; /* Meniul devine vertical pe ecrane mici */
+                flex-direction: column;
                 align-items: center;
             }
 
@@ -99,6 +92,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
         section {
             padding: 20px;
+        }
+
+        .product {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 10px;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .product img {
+            max-width: 150px;
+            margin-right: 20px;
+            border-radius: 5px;
+        }
+
+        .product h4 {
+            margin: 0 0 10px 0;
         }
 
         footer {
@@ -127,10 +141,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </style>
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55BWCZKP"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
     <header>
         <div class="logo-container">
             <img src="12.jpg" alt="Casa Ta Inteligentă">
@@ -150,55 +160,132 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3>Produsele noastre:</h3>
         <p>Oferim soluții complete pentru automatizarea casei tale. Fie că îți dorești un sistem de iluminat inteligent, un termostat modern sau un sistem de securitate avansat, noi avem soluția ideală pentru tine.</p>
 
-        <h4>Listă produse și prețuri (cu dispozitive și manoperă)</h4>
+        <!-- Produse principale -->
+        <div class="product">
+            <img src="images/Captura.png" alt="Bec inteligent">
+            <div>
+                <h4>Bec inteligent LED</h4>
+                <p>Preț: 100 RON/buc</p>
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="images/banda-led.jpg" alt="Bandă LED RGB">
+            <div>
+                <h4>Bandă LED RGB</h4>
+                <p>Preț: 300 RON/5 metri</p>
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="images/termostat.jpg" alt="Termostat Wi-Fi">
+            <div>
+                <h4>Termostat inteligent Wi-Fi</h4>
+                <p>Preț: 550 RON</p>
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="images/camera-securitate.jpg" alt="Cameră de supraveghere">
+            <div>
+                <h4>Cameră de supraveghere</h4>
+                <p>Preț: 200 RON/buc</p>
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="images/priza-inteligenta.jpg" alt="Priză inteligentă">
+            <div>
+                <h4>Priză inteligentă Wi-Fi</h4>
+                <p>Preț: 200 RON/buc</p>
+            </div>
+        </div>
+
+        <!-- Produse suplimentare -->
+        <h4>Produse suplimentare:</h4>
         <ul>
-            <li><b>Iluminat inteligent</b>
-                <ul>
-                    <li>Bec inteligent LED (instalare și configurare) - 100 RON/buc</li>
-                    <li>Bandă LED RGB (montaj și conectare la aplicație) - 300 RON/5 metri</li>
-                    <li>Întrerupător smart Wi-Fi (montaj și configurare) - 100 RON/buc</li>
-                    <br>
-                </ul>
+            <li><b>Automatizare electrocasnice:</b>
+                <div class="product">
+                    <img src="images/smart-hub.jpg" alt="Smart Hub">
+                    <div>
+                        <h4>Smart Hub pentru automatizarea electrocasnicelor (montaj inclus)</h4>
+                        <p>Preț: 700 RON</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/robot-aspirator.jpg" alt="Robot Aspirator">
+                    <div>
+                        <h4>Robot aspirator inteligent (configurare și integrare în sistem)</h4>
+                        <p>Preț: 2.500 RON</p>
+                    </div>
+                </div>
             </li>
-            <li><b>Termostate inteligente</b>
-                <ul>
-                    <li>Termostat inteligent Wi-Fi (inclusiv instalare și configurare) - 550 RON</li>
-                    <li>Termostat pentru încălzire prin pardoseală (montaj și configurare) - 1.200 RON</li>
-                    <br>
-                </ul>
+
+            <li><b>Control vocal și centralizare:</b>
+                <div class="product">
+                    <img src="images/control-vocal.jpg" alt="Control Vocal">
+                    <div>
+                        <h4>Dispozitiv de control vocal (compatibil Alexa/Google Home) (configurare inclusă)</h4>
+                        <p>Preț: 350 RON</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/hub-automation.jpg" alt="Hub de Automatizare">
+                    <div>
+                        <h4>Hub de automatizare Z-Wave (montaj și configurare)</h4>
+                        <p>Preț: 850 RON</p>
+                    </div>
+                </div>
             </li>
-            <li><b>Sisteme de securitate inteligente</b>
-                <ul>
-                    <li>Cameră de supraveghere Wi-Fi (montaj și conectare la aplicație) - 200 RON/buc</li>
-                    <li>Pachet de 2 camere de supraveghere + hub (montaj inclus) - 1.300 RON</li>
-                    <li>Sistem complet de alarmă inteligentă (senzori uși/geamuri, sirenă, inclusiv instalare și configurare) - 2.000 RON</li>
-                    <br>
-                </ul>
-            </li>
-            <li><b>Automatizarea electrocasnicelor</b>
-                <ul>
-                    <li>Priză inteligentă Wi-Fi in doza (montaj și configurare) - 200 RON/buc</li>
-                    <li>Smart Hub pentru automatizarea electrocasnicelor (montaj inclus) - 700 RON</li>
-                    <li>Robot aspirator inteligent (configurare și integrare în sistem) - 2.500 RON</li>
-                    <br>
-                </ul>
-            </li>
-            <li><b>Control vocal și centralizare</b>
-                <ul>
-                    <li>Dispozitiv de control vocal (compatibil Alexa/Google Home) (configurare inclusă) - 350 RON</li>
-                    <li>Hub de automatizare Z-Wave (montaj și configurare) - 850 RON</li>
-                    <br>
-                </ul>
-            </li>
-            <li><b>Accesorii utile</b>
-                <ul>
-                    <li>Senzor inteligent de temperatură și umiditate (instalare și integrare) - 150 RON</li>
-                    <li>Senzor de inundație Wi-Fi (montaj și configurare) - 150 RON</li>
-                    <li>Senzor de prezență (instalare și configurare) - 150 RON</li>
-                    <li>Senzor de fum inteligent (montaj și conectare la aplicație) - 200 RON</li>
-                    <li>Senzor de gaz inteligent (instalare și configurare) - 150 RON</li>
-                    <li>Senzor pentru uși/geamuri (montaj inclus) - 100 RON/buc</li>
-                    <li>Barieră IR (infraroșu) (montaj și configurare) - 600 RON</li>
+
+            <li><b>Accesorii utile:</b>
+                <div class="product">
+                    <img src="images/senzor-temperatura.jpg" alt="Senzor Temperatură">
+                    <div>
+                        <h4>Senzor inteligent de temperatură și umiditate (instalare și integrare)</h4>
+                        <p>Preț: 150 RON</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/senzor-inundatie.jpg" alt="Senzor Inundație">
+                    <div>
+                        <h4>Senzor de inundație Wi-Fi (montaj și configurare)</h4>
+                        <p>Preț: 150 RON</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/senzor-prezenta.jpg" alt="Senzor Prezență">
+                    <div>
+                        <h4>Senzor de prezență (instalare și configurare)</h4>
+                        <p>Preț: 150 RON</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/senzor-fum.jpg" alt="Senzor Fum Inteligent">
+                    <div>
+                        <h4>Senzor de fum inteligent (montaj și conectare la aplicație)</h4>
+                        <p>Preț: 200 RON</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/senzor-gaz.jpg" alt="Senzor Gaz Inteligent">
+                    <div>
+                        <h4>Senzor de gaz inteligent (instalare și configurare)</h4>
+                        <p>Preț: 150 RON</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/senzor-usa.jpg" alt="Senzor Ușă/Geam">
+                    <div>
+                        <h4>Senzor pentru uși/geamuri (montaj inclus)</h4>
+                        <p>Preț: 100 RON/buc</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/bariera-ir.jpg" alt="Barieră IR">
+                    <div>
+                        <h4>Barieră IR (infraroșu) (montaj și configurare)</h4>
+                        <p>Preț: 600 RON</p>
                 </ul>
             </li>
         </ul>
