--- a/produse.html
+++ b/produse.html
@@ -221,7 +221,7 @@
         <div class="product-container">
             <!-- Exemplu de produs -->
             <div class="product-item">
-                <img src="images\Captura.png" alt="Iluminat inteligent" class="product-image">
+                <img src="images/Captura.png" alt="Iluminat inteligent" class="product-image">
                 <div class="product-info">
                     <h5>Iluminat inteligent</h5>
                     <p>Descriere scurtă a produsului. Detalii suplimentare dacă este necesar.</p>
