--- a/produse.html
+++ b/produse.html
@@ -221,7 +221,7 @@
         <div class="product-container">
             <!-- Exemplu de produs -->
             <div class="product-item">
-                <img src="images/Captura.png" alt="Iluminat inteligent" class="product-image">
+                <img src="Captură.PNG" alt="Iluminat inteligent" class="product-image">
                 <div class="product-info">
                     <h5>Iluminat inteligent</h5>
                     <p>Descriere scurtă a produsului. Detalii suplimentare dacă este necesar.</p>
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="product2.jpg" alt="Termostat inteligent" class="product-image">
+                <img src="termostat.PNG" alt="Termostat inteligent" class="product-image">
                 <div class="product-info">
                     <h5>Termostat inteligent</h5>
                     <p>Descriere scurtă a produsului. Detalii suplimentare dacă este necesar.</p>
