--- a/produse.html
+++ b/produse.html
@@ -237,6 +237,79 @@
                 </div>
             </div>
             <!-- Adaugă mai multe produse în același format -->
+            <div class="product-item">
+                <img src="camere.PNG" alt="Sistem de securitate video" class="product-image">
+                <div class="product-info">
+                    <h5>Sistem de securitate video</h5>
+                    <p>Un sistem avansat de securitate cu camere video și alertă în timp real pentru protecția casei tale.</p>
+                    <span class="product-price">1,200 RON</span>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <img src="senzor miscare.png" alt="Senzori de mișcare" class="product-image">
+                <div class="product-info">
+                    <h5>Senzori de mișcare</h5>
+                    <p>Senzorii de mișcare pot detecta prezența în cameră și pot activa automat lumina sau alte dispozitive.</p>
+                    <span class="product-price">150 RON</span>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <img src="priza.PNG" alt="Priză inteligentă" class="product-image">
+                <div class="product-info">
+                    <h5>Priză inteligentă</h5>
+                    <p>Priza inteligentă îți permite să controlezi alimentarea dispozitivelor tale de la distanță, economisind energie și asigurând siguranța casei tale.</p>
+                    <span class="product-price">120 RON</span>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <img src="priza.PNG" alt="Priză inteligentă Wi-Fi" class="product-image">
+                <div class="product-info">
+                    <h5>Priză inteligentă Wi-Fi in doza (montaj și configurare)</h5>
+                    <p>Controlează de la distanță dispozitivele prin Wi-Fi și economisește energie.</p>
+                    <span class="product-price">200 RON</span>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <img src="zvave.PNG" alt="Smart Hub" class="product-image">
+                <div class="product-info">
+                    <h5>Smart Hub pentru automatizarea electrocasnicelor (montaj inclus)</h5>
+                    <p>Un hub pentru integrarea și automatizarea electrocasnicelor tale.</p>
+                    <span class="product-price">700 RON</span>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <img src="aspirator.PNG" alt="Robot aspirator" class="product-image">
+                <div class="product-info">
+                    <h5>Robot aspirator inteligent (configurare și integrare în sistem)</h5>
+                    <p>Un robot aspirator care poate fi controlat prin aplicație sau voce pentru curățenie automată.</p>
+                    <span class="product-price">2,500 RON</span>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <img src="alexa.PNG" alt="Dispozitiv de control vocal" class="product-image">
+                <div class="product-info">
+                    <h5>Dispozitiv de control vocal (compatibil Alexa/Google Home)</h5>
+                    <p>Controlează toate dispozitivele tale inteligente prin comenzi vocale cu Alexa sau Google Home.</p>
+                    <span class="product-price">350 RON</span>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <img src="zvave.PNG" alt="Hub de automatizare Z-Wave" class="product-image">
+                <div class="product-info">
+                    <h5>Hub de automatizare Z-Wave (montaj și configurare)</h5>
+                    <p>Integrați toate dispozitivele smart într-un singur hub de automatizare Z-Wave.</p>
+                    <span class="product-price">850 RON</span>
+                </div>
+            </div>
+        </div>
+
         </div>
 
         <h4>Costuri suplimentare: Manoperă fără dispozitive</h4>
