--- a/produse.html
+++ b/produse.html
@@ -247,7 +247,7 @@
             </div>
 
             <div class="product-item">
-                <img src="senzor miscare.png" alt="Senzori de mișcare" class="product-image">
+                <img src="senzor miscare.PNG" alt="Senzori de mișcare" class="product-image">
                 <div class="product-info">
                     <h5>Senzori de mișcare</h5>
                     <p>Senzorii de mișcare pot detecta prezența în cameră și pot activa automat lumina sau alte dispozitive.</p>
@@ -256,11 +256,11 @@
             </div>
 
             <div class="product-item">
-                <img src="priza.PNG" alt="Priză inteligentă" class="product-image">
+                <img src="priza aplicata.PNG" alt="Priză inteligentă" class="product-image">
                 <div class="product-info">
                     <h5>Priză inteligentă</h5>
                     <p>Priza inteligentă îți permite să controlezi alimentarea dispozitivelor tale de la distanță, economisind energie și asigurând siguranța casei tale.</p>
-                    <span class="product-price">120 RON</span>
+                    <span class="product-price">100 RON</span>
                 </div>
             </div>
 
@@ -274,11 +274,11 @@
             </div>
 
             <div class="product-item">
-                <img src="zvave.PNG" alt="Smart Hub" class="product-image">
+                <img src="smarthub.PNG" alt="Smart Hub" class="product-image">
                 <div class="product-info">
                     <h5>Smart Hub pentru automatizarea electrocasnicelor (montaj inclus)</h5>
                     <p>Un hub pentru integrarea și automatizarea electrocasnicelor tale.</p>
-                    <span class="product-price">700 RON</span>
+                    <span class="product-price">100 RON</span>
                 </div>
             </div>
 
