--- a/produse.html
+++ b/produse.html
@@ -301,6 +301,68 @@
             </div>
 
             <div class="product-item">
+    <img src="senzor temp.PNG" alt="Senzor inteligent de temperatură și umiditate" class="product-image">
+    <div class="product-info">
+        <h5>Senzor inteligent de temperatură și umiditate (instalare și integrare)</h5>
+        <p>Monitorizează temperatura și umiditatea din locuința ta și trimite notificări pe telefon.</p>
+        <span class="product-price">150 RON</span>
+    </div>
+</div>
+
+<div class="product-item">
+    <img src="releu.PNG" alt="Releu Smart" class="product-image">
+    <div class="product-info">
+        <h5>Releu Smart (montaj și configurare)</h5>
+        <p>Controleaza orice dispozitiv eletronic conectat la acest dispozitiv.</p>
+        <span class="product-price">100 RON</span>
+    </div>
+</div>
+
+<div class="product-item">
+    <img src="senz inundatie.PNG" alt="Senzor de inundație Wi-Fi" class="product-image">
+    <div class="product-info">
+        <h5>Senzor de inundație Wi-Fi (montaj și configurare)</h5>
+        <p>Detectează scurgerile de apă și te avertizează imediat prin aplicație.</p>
+        <span class="product-price">150 RON</span>
+    </div>
+</div>
+
+<div class="product-item">
+    <img src="enzor fum.PNG" alt="Senzor de fum inteligent" class="product-image">
+    <div class="product-info">
+        <h5>Senzor de fum inteligent (montaj și conectare la aplicație)</h5>
+        <p>Detectează fumul și trimite alerte instantanee pe telefonul tău.</p>
+        <span class="product-price">200 RON</span>
+    </div>
+</div>
+
+<div class="product-item">
+    <img src="gaz.PNG" alt="Senzor de gaz inteligent" class="product-image">
+    <div class="product-info">
+        <h5>Senzor de gaz inteligent (instalare și configurare)</h5>
+        <p>Monitorizează scurgerile de gaz și trimite notificări în timp real.</p>
+        <span class="product-price">150 RON</span>
+    </div>
+</div>
+
+<div class="product-item">
+    <img src="senz usa.PNG" alt="Senzor pentru uși/geamuri" class="product-image">
+    <div class="product-info">
+        <h5>Senzor pentru uși/geamuri (montaj inclus)</h5>
+        <p>Detectează deschiderea ușilor sau a ferestrelor și trimite alerte rapide.</p>
+        <span class="product-price">100 RON/buc</span>
+    </div>
+</div>
+
+<div class="product-item">
+    <img src="bariera.PNG" alt="Barieră IR (infraroșu)" class="product-image">
+    <div class="product-info">
+        <h5>Barieră IR (infraroșu) (montaj și configurare)</h5>
+        <p>Oferă protecție perimetrală detectând orice mișcare în spațiul desemnat.</p>
+        <span class="product-price">600 RON</span>
+    </div>
+</div>
+            <div class="product-item">
                 <img src="zvave.PNG" alt="Hub de automatizare Z-Wave" class="product-image">
                 <div class="product-info">
                     <h5>Hub de automatizare Z-Wave (montaj și configurare)</h5>
