--- a/produse.html
+++ b/produse.html
@@ -382,13 +382,8 @@
             <li><b>Manoperă pentru accesorii inteligente:</b> Senzori temperatură, inundație, uși - 50 RON/buc; Priză inteligentă - 70 RON/buc</li>
         </ul>
 
-        <h4>Costuri suplimentare: Deplasarea</h4>
-        <ul>
-            <li>Deplasare în municipiul Brașov - 50 RON</li>
-            <li>Deplasare în afara municipiului Brașov - 2 RON/km</li>
-        </ul>
 
-        <p><b>Pentru o ofertă personalizată, contactați-ne!</b></p>
+        <p><b>Produsele afișate reprezintă doar o selecție din gama noastră de soluții inteligente pentru casă. Pentru a configura un sistem care să răspundă perfect nevoilor și preferințelor dumneavoastră, vă invităm să ne contactați! Echipa noastră vă stă la dispoziție pentru consultanță și soluții personalizate!</b></p>
     </section>
 
     <footer>
