--- a/produse.html
+++ b/produse.html
@@ -217,7 +217,7 @@
         <h3>Produsele noastre:</h3>
         <p>Oferim soluții complete pentru automatizarea casei tale. Fie că îți dorești un sistem de iluminat inteligent, un termostat modern sau un sistem de securitate avansat, noi avem soluția ideală pentru tine.</p>
 
-        <h4>Listă produse și prețuri (cu dispozitive și manoperă)</h4>
+        <h4>Listă produse și prețuri (dispozitiv și manoperă inclusa)</h4>
         <div class="product-container">
             <!-- Exemplu de produs -->
             <div class="product-item">
