--- a/produse.html
+++ b/produse.html
@@ -318,6 +318,15 @@
     </div>
 </div>
 
+            <div class="product-item">
+    <img src="camera 360.PNG" alt="Cameră Wi-Fi Rotativă" class="product-image">
+    <div class="product-info">
+        <h5>Cameră Wi-Fi Rotativă (montaj și configurare)</h5>
+        <p>Cameră Wi-Fi Rotativă – Supraveghere inteligentă 360° cu control de la distanță, calitate video HD, vedere nocturnă și detectare a mișcării. Ideală pentru siguranța casei tale!</p>
+        <span class="product-price">250 RON</span>
+    </div>
+</div>
+
 <div class="product-item">
     <img src="senz inundatie.PNG" alt="Senzor de inundație Wi-Fi" class="product-image">
     <div class="product-info">
