--- a/index.html
+++ b/index.html
@@ -134,6 +134,33 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             text-decoration: underline;
         }
 
+        .announcement {
+            background-color: #ffcc00;
+            color: #000;
+            padding: 10px;
+            text-align: center;
+            font-weight: bold;
+            font-size: 1.2em;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .announcement span {
+            display: inline-block;
+            white-space: nowrap;
+            position: absolute;
+            animation: scroll-left 10s linear infinite;
+        }
+
+        @keyframes scroll-left {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+
         @media (max-width: 768px) {
             .slogan {
                 font-size: 1.2em;
@@ -168,6 +195,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <h2 class="slogan">Transformăm locuințele obișnuite în case inteligente!</h2>
     </header>
+
+    <div class="announcement">
+        <span>🎉 Reducere specială! Pentru următoarele 10 persoane, aplicăm 50% reducere la manoperă! Nu rata această ofertă limitată! 🎉</span>
+    </div>
 
     <nav>
         <ul>
