--- a/index.html
+++ b/index.html
@@ -190,11 +190,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <header>
+    <div style="position: relative; overflow: hidden;">
+        <div id="special-offer" style="background-color: #ffcc00; color: #000; padding: 10px; font-size: 18px; font-weight: bold; text-align: center; position: absolute; top: 0; width: 100%; z-index: 9999; animation: slide 10s infinite linear;">
+            Reducere de 50% pentru manoperă pentru următoarele 10 persoane! Contactează-ne acum!
+        </div>
         <div class="logo-container">
             <img src="11.png" alt="Logo Casa Ta Inteligentă">
         </div>
-        <h2 class="slogan">Transformăm locuințele obișnuite în case inteligente!</h2>
-    </header>
+    </div>
+    <h2 class="slogan">Transformăm locuințele obișnuite în case inteligente!</h2>
+</header>
+
+<style>
+@keyframes slide {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+</style>
+
 
     <div class="announcement">
         <span>🎉 Reducere specială! Pentru următoarele 10 persoane, aplicăm 50% reducere la manoperă! Nu rata această ofertă limitată! 🎉</span>
