--- a/index.html
+++ b/index.html
@@ -145,21 +145,35 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             position: relative;
         }
 
-        .announcement span {
-            display: inline-block;
-            white-space: nowrap;
-            position: absolute;
-            animation: scroll-left 10s linear infinite;
-        }
+        .announcement {
+    background-color: #ffcc00;
+    color: #000;
+    padding: 15px 10px; /* Crește padding-ul */
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.2em;
+    overflow: hidden;
+    position: relative;
+    height: auto; /* Asigură-te că înălțimea se ajustează */
+}
 
-        @keyframes scroll-left {
-            0% {
-                transform: translateX(100%);
-            }
-            100% {
-                transform: translateX(-100%);
-            }
-        }
+.announcement span {
+    display: inline-block;
+    white-space: nowrap;
+    position: absolute;
+    animation: scroll-left 10s linear infinite;
+    padding-right: 100%; /* Adaugă spațiu pentru margini */
+}
+
+@keyframes scroll-left {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
 
         @media (max-width: 768px) {
             .slogan {
@@ -189,31 +203,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55BWCZKP"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-    <header>
-    <div style="position: relative; overflow: hidden;">
-        <div id="special-offer" style="background-color: #ffcc00; color: #000; padding: 10px; font-size: 18px; font-weight: bold; text-align: center; position: absolute; top: 0; width: 100%; z-index: 9999; animation: slide 10s infinite linear;">
-            Reducere de 50% pentru manoperă pentru următoarele 10 persoane! Contactează-ne acum!
-        </div>
-        <div class="logo-container">
-            <img src="11.png" alt="Logo Casa Ta Inteligentă">
-        </div>
-    </div>
-    <h2 class="slogan">Transformăm locuințele obișnuite în case inteligente!</h2>
-</header>
 
-<style>
-@keyframes slide {
-    from {
-        transform: translateX(100%);
-    }
-    to {
-        transform: translateX(-100%);
-    }
-}
-</style>
-
-
-    <div class="announcement">
+ <div class="announcement">
         <span>🎉 Reducere specială! Pentru următoarele 10 persoane, aplicăm 50% reducere la manoperă! Nu rata această ofertă limitată! 🎉</span>
     </div>
 
