--- a/produse.html
+++ b/produse.html
@@ -221,10 +221,18 @@
         <div class="product-container">
             <!-- Exemplu de produs -->
             <div class="product-item">
+                <img src="poarta.PNG" alt="Automatizare porta auto\garaj" class="product-image">
+                <div class="product-info">
+                    <h5>Termostat inteligent</h5>
+                    <p>Deschide poarta in 2 moduri, cu telecomanda sau prin smartphone.</p>
+                    <span class="product-price">1800 RON</span>
+                </div>
+                </div>
+            <div class="product-item">
                 <img src="termostat.PNG" alt="Termostat inteligent" class="product-image">
                 <div class="product-info">
                     <h5>Termostat inteligent</h5>
-                    <p>Descriere scurtă a produsului. Detalii suplimentare dacă este necesar.</p>
+                    <p>Te ajuta sa creezi scenarii pentru a mentine o temperatura/umiditate perfecte!.</p>
                     <span class="product-price">550 RON</span>
                 </div>
                 </div>
@@ -232,7 +240,7 @@
                 <img src="Captură.PNG" alt="Iluminat inteligent" class="product-image">
                 <div class="product-info">
                     <h5>Iluminat inteligent</h5>
-                    <p>Descriere scurtă a produsului. Detalii suplimentare dacă este necesar.</p>
+                    <p>Aprinde/stinge iluminatul de oriunde, sau creaza scenarii prin care se aprinde/stinge in functie de prezenta, perioada zilei, etc.</p>
                     <span class="product-price">100 RON</span>
                 
             </div>
