--- a/produse.html
+++ b/produse.html
@@ -220,20 +220,21 @@
         <h4>Listă produse și prețuri (dispozitiv și manoperă inclusa)</h4>
         <div class="product-container">
             <!-- Exemplu de produs -->
-            <div class="product-item">
-                <img src="poarta.PNG" alt="Automatizare porta auto\garaj" class="product-image">
-                <div class="product-info">
-                    <h5>Termostat inteligent</h5>
-                    <p>Deschide poarta in 2 moduri, cu telecomanda sau prin smartphone.</p>
-                    <span class="product-price">1800 RON</span>
-                </div>
-                </div>
+        
             <div class="product-item">
                 <img src="termostat.PNG" alt="Termostat inteligent" class="product-image">
                 <div class="product-info">
                     <h5>Termostat inteligent</h5>
                     <p>Te ajuta sa creezi scenarii pentru a mentine o temperatura/umiditate perfecte!.</p>
                     <span class="product-price">550 RON</span>
+                </div>
+                </div>
+            <div class="product-item">
+                <img src="poarta.PNG" alt="Automatizare porta auto\garaj" class="product-image">
+                <div class="product-info">
+                    <h5>Automatizare poarta!</h5>
+                    <p>Deschide poarta in 2 moduri, cu telecomanda sau prin smartphone.</p>
+                    <span class="product-price">1800 RON</span>
                 </div>
                 </div>
 <div class="product-item">
